--- a/EmailSystem/EmailSystem/Views/Add.cshtml
+++ b/EmailSystem/EmailSystem/Views/Add.cshtml
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="row justify-content-end">
                 <div class="">
-                    <a asp-controller="email" asp-action="add" class="btn btn-warning">Email List</a>
+                    <a asp-controller="email" asp-action="list" class="btn btn-warning">Email List</a>
                 </div>
             </div>
             <form method="POST" asp-controller="Email" asp-action="Add">
